# azure-snowflake-dbt-local-data-platform

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  dbt-validation.yml  docs-validation.yml
dashboard/: app.py
data/samples/: customers.csv  events_sample.jsonl  orders.csv  payments.json
dbt/: dbt_project.yml  profiles.yml
dbt/models/: sources.yml
dbt/models/marts/: dim_customers.sql  fct_orders.sql  mart_customer_360.sql  mart_placeholder.sql  schema.yml
dbt/models/staging/: schema.yml  stg_customers.sql  stg_events.sql  stg_orders.sql  stg_payments.sql
docs/: architecture.md  business_requirements.md  data_contracts.md  data_governance.md  migration_to_azure_snowflake.md  project_status.md  troubleshooting.md
sql/analytical_queries/: customer_360.sql  customer_engagement_summary.sql  payment_quality_summary.sql  revenue_by_channel.sql
sql/snowflake_compatible/: create_database.sql  create_schemas.sql  create_tables.sql  procedures_examples.sql
src/: __init__.py
src/batch/: __init__.py  ingest_customers.py  ingest_orders.py  ingest_payments.py  run_batch_pipeline.py
src/quality/: __init__.py  data_quality_report.py
src/streaming/: __init__.py  consumer_events.py  producer_events.py
src/utils/: __init__.py  audit.py  config.py  io.py  logger.py
tests/: test_audit_logs.py  test_batch_ingestion.py  test_data_contracts.py
