[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-snowflake-dbt-local-data-platform"
version = "0.1.0"
description = "Laboratorio local para simular padroes de Engenharia de Dados inspirados em Azure + Snowflake."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["dbt_packages", "target"]
