[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-snowflake-dbt-local-data-platform"
version = "0.1.0"
description = "Laboratorio local para simular padroes de Engenharia de Dados inspirados em Azure + Snowflake."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka>=2.5.0,<3.0.0",
    "pandas>=2.2.0,<3.0.0",
    "pyarrow>=17.0.0,<18.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["dbt_packages", "target"]
